[tool.poetry]
name = "cavegenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.5.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.6"
pytest = "^7.4.2"
shapely = "^2.0.1"


[tool.poetry.group.devv.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
